Style.css
 
hr{color: rgb(84, 234, 226);}
*{
    background-color: black;
    color:white





}


p{

font-family: serif;

}


header{ 
background-image: url(photo/trackiationless.png);
}
nav{
    display: flex;
    justify-content: space-between;
    
}

.nav-title{

   font-size: 25px;
   font-weight: 800px;

}
nav > ul{

    display: flex;
    align-items: center;
}

    nav li {

list-style: none;
 margin-right: 50px;
}
nav a{text-decoration: none;
color: white;
}
.banner{
    display: flex;
    align-items: center;
}
.site-photo{ width: 500px;}

.qw
{margin-left: 10px;}
.social{
    margin-top: 20px;
}
p{font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}

.about-me{

padding: 150px;

}

.about{text-align: center;}
.about-description{text-align: center;}

.about-info-container{
    display: flex;
    justify-content: space-around;
}


.about-info{
text-align: center;

}

.wido{
    
    padding: 30px 150px;

    
        
}
.wido-title{

    text-align: center;
}
.wido-description{
    text-align: center;
    padding: 20px 150px;

}

.skill-container{
    display: flex;

}

.skill{
    padding: 30px;
    gap: 24px;
    background: #42424277;
    box-shadow: 2px 6px 50px 2px rgb(58, 58, 58 );
       
      }
      

.skill-description{
/* padding: 30px; */
text-align: center;

}


/* resume section */

.resume-title{
    text-align: center
    ;
font-size: 35px;

}


.resume-column-title{
color: #474747;

font-size: 30px;

font-weight: 700;

}

.resume-container{

    display: flex;
    gap: 40px;

}

.resume-item-title{
    color: #474747;
    font-size: 25px;
font-weight: 700;
margin: 10px;


}


.resume-item-institute, .resume-item-description{

color: #d0c8c8;

}

.resume-container hr{margin: 30px 1px;}

.cv-donload{
    text-align: center;
    margin: 30px;
}

footer{
    display: flex;
    margin: 20px;
    /* align-items: center; */
}



.footer-section-title{text-align: center;}
.footer-section-description{text-align: center;}
.footer-social-links{text-align: center;}

